Added new option goklp_ldap_ssh_key_attr to identify ssh key attribute from ldap

--- a/goklp.ini
+++ b/goklp.ini
@@ -4,5 +4,6 @@ goklp_ldap_base_dn          = O=someorg,C=sometld
 goklp_ldap_bind_pw          = someSecretPassword
 goklp_ldap_timeout          = 5
 goklp_debug                 = false
+goklp_ldap_user_attr        = uid
+goklp_ldap_ssh_key_attr     = sshPublicKey
 goklp_insecure_skip_verify  = false
-
