--- a/goklp.ini
+++ b/goklp.ini
@@ -3,6 +3,7 @@ goklp_ldap_bind_dn          = CN=someuser,O=someorg,C=sometld
 goklp_ldap_base_dn          = O=someorg,C=sometld
 goklp_ldap_bind_pw          = someSecretPassword
 goklp_ldap_timeout          = 5
+goklp_ldap_filter           = memberOf=cn=local-firewalls,cn=groups,cn=accounts,dc=pasientsky,dc=no
 goklp_debug                 = false
 goklp_ldap_user_attr        = uid
 goklp_ldap_ssh_key_attr     = sshPublicKey
